--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,4 +1,4 @@
-{% unless page.no_header %}
+{% unless page.no_header or !post.link %}
   <header>
     {% if index %}
       <h1 class="entry-title"><a href="{{ root_url }}{{ post.url }}">{{ post.title | titlecase }}</a></h1>
