by moving asin variable assignment to _config.yml, the for loop in aws.html works. need a better solution than this, but at least it is working now.

--- a/source/_includes/custom/asides/aws.html
+++ b/source/_includes/custom/asides/aws.html
@@ -1,18 +1,9 @@
+<!-- relies upon variable assignment in _config.yml -->
 <section>
   <h1>Recent Diversions</h1>
-  <p> 
-	{{ "0743276396" | amazon_medium_image}}
-  </p>
-  <p>
-	{{ "0743276396" | amazon_link }}
-	by {{ "0743276396" | amazon_authors }}
-  </p>
-
-  <p> 
-	{{ "B001YT048E" | amazon_medium_image}}
-  </p>
-  <p>
-	{{ "B001YT048E" | amazon_link }}
-	by {{ "B001YT048E" | amazon_authors }}
-  </p>
+  {% for asin in site.asins %}
+    <p>{{ asin | amazon_medium_image }}</p>
+    <p>{{ asin | amazon_link }} by {{ asin | amazon_authors }}</p>
+    
+  {% endfor %}
 </section>
