--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -8,7 +8,7 @@ body > header { padding: 0; background-image: image_url("shoreline.png"); backgr
 body > header > hgroup > h1 { margin-left: 55px; font-size: 60px; line-height: 72px; }
 body > header > hgroup > h2 { margin-left: 55px; font-size: small; margin-top: -12px; }
 
-// lets center any table we encounter
+// let's center any table we encounter
 table { margin-left: auto; margin-right: auto; }
 
 // some utility stuff
@@ -88,3 +88,9 @@ hr { line-height: 18px; }
 // hover style to expand figures
 article { overflow: visible; }
 figure[role="code"]:hover, .gist:hover { width: 800px; overflow: inherit; }
+
+// set z-index for content and aside so that expanding code 
+// blocks in content are on top of aside and its content
+body > content { z-index: 2000; }
+body > aside   { z-index: 1000; }
+body > aside > flex-content { z-index: 1000; }
