Added comment count display to site index page.
Added code to article.html to display comment count for regular postings and link
postings. Regular postings will show count just after their title, link postings
display the comment count as a footer to the post.

Added site.disqus_show_comment_count attribute to _config.yml file. This will allow for site
wide enabling/disabling of comment count display.

Added new 'vsmall' (very small) style to size comment count.

Added posting describing new site feature.

--- a/source/_includes/article.html
+++ b/source/_includes/article.html
@@ -1,7 +1,12 @@
 {% unless page.no_header or !post.link %}
   <header>
     {% if index %}
-      <h1 class="entry-title"><a href="{{ root_url }}{{ post.url }}">{{ post.title | titlecase }}</a></h1>
+      <h1 class="entry-title">
+		  <a href="{{ root_url }}{{ post.url }}">{{ post.title | titlecase }}</a>
+	  </h1>
+	  {% if site.disqus_short_name and post.comments != false and site.disqus_show_comment_count == true and post.url %} 	<a class="commentinfo" href="{{ root_url }}{{ post.url }}#disqus_thread" data-disqus-identifier="http://zanshin.net{{ post.url }}">Comments</a>
+	  {% endif %}
+	  
     {% else %}
       <h1 class="entry-title">{{ page.title | titlecase }}</h1>
     {% endif %}
@@ -21,3 +26,10 @@
 {% else %}
 <div class="entry-content">{{ content }}</div>
 {% endif %}
+{% if post.link %}
+  <footer>
+	  {% if site.disqus_short_name and post.comments != false and site.disqus_show_comment_count == true and post.url %} 	<a class="commentinfo" href="{{ root_url }}{{ post.url }}#disqus_thread" data-disqus-identifier="http://zanshin.net{{ post.url }}">Comments</a>
+	  {% endif %}
+  </footer>
+{% endif %}
+
