--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -13,6 +13,7 @@ table { margin-left: auto; margin-right: auto; }
 
 // some utility stuff
 .right { float: right; }
+.commentinfo { font-size: .8em; }
 
 // change the page background
 html { background: #f5f5f5; }
