--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -89,5 +89,5 @@ hr { line-height: 18px; }
 // hover style to expand figures
 // use z-index to properly layer elements so that expanded figure overlays sidebar
 article { overflow: visible; }
-figure[role="code"]:hover, .gist:hover { width: 800px; overflow: inherit; position: relative; z-index: 2;}
+figure[role="code"]:hover, .gist:hover, pre:hover { width: 800px; overflow: inherit; position: relative; z-index: 2;}
 aside[role="sidebar"]  { z-index: 1; }
