Fixing line number display in code blocks.
Adding :hover to pre selectors works for code blocks defined by 4-space indentation, however,
it breaks the line number column in gists and figure (codeblock) displays. Added new lines
to set line-number width to 15px and to reset it to that width after hover.

--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -90,4 +90,6 @@ hr { line-height: 18px; }
 // use z-index to properly layer elements so that expanded figure overlays sidebar
 article { overflow: visible; }
 figure[role="code"]:hover, .gist:hover, pre:hover { width: 800px; overflow: inherit; position: relative; z-index: 2;}
+pre.line-numbers {width: 10px; }
+pre.line-numbers:hover { width: 10px; }
 aside[role="sidebar"]  { z-index: 1; }
