Added SOPA/PIPA header to site and added new link to navigation.
Using javascript added SOPA/PIPA header to site for the day.
Added link to cello.zanshin.net to navigation bar.

--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -4,3 +4,6 @@
   <span class="right small"><a href="/policies" title="Policies">Policies</a> |
   Hosting by <a href="http://bluehost.com" title="Bluehost">Bluehost</a></span>
 </p>
+
+<script type="text/javascript" src="//www.hellobar.com/hellobar.js"></script>
+<script type="text/javascript">new HelloBar(1,47972);</script>
