--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -5,4 +5,5 @@
   <li><a href="{{ root_url }}/books">Books</a></li>
   <li><a href="{{ root_url }}/colophon">Colophon</a></li>
   <li><a href="{{ root_url }}/interact">Interact</a></li>
+  <li><a href="http://cello.zanshin.net">Solfège</a></li>
 </ul>
