--- a/sass/custom/_styles.scss
+++ b/sass/custom/_styles.scss
@@ -2,11 +2,11 @@
 // Add styles here to make changes without digging in too much
 
 // let's have a background image in the header
-body > header { padding: 0; background-image: image_url("shoreline.png"); background-position: 0 0; height: 191px; }
+body > header { padding: 0; background-image: image_url("shoreline960.png"); background-position: 0 0; height: 191px; }
 
 // alter how the page header h1 and h2 appear
 body > header > hgroup > h1 { margin-left: 55px; font-size: 60px; line-height: 72px; }
-body > header > hgroup > h2 { margin-left: 55px; font-size: small; margin-top: -12px; }
+body > header > hgroup > h2 { margin-left: 55px; font-size: small; margin-top: -12px; color: black; }
 
 // let's center any table we encounter
 table { margin-left: auto; margin-right: auto; }
