updated Rakefile for webfaction server and changed hosted by in footer

--- a/source/_includes/custom/footer.html
+++ b/source/_includes/custom/footer.html
@@ -2,5 +2,5 @@
   Copyright &copy; 1996 - {{ site.time | date: "%Y" }} - {{ site.author }} -
   <span class="credit"><a href="http://octopress.org">Octopress</a> powered.</span>
   <span class="right small"><a href="/policies" title="Policies">Policies</a> |
-  Hosting by <a href="http://bluehost.com" title="Bluehost">Bluehost</a></span>
+  Hosting by <a href="http://www.webfaction.com/?affiliate=markn" title="WebFaction">WebFaction</a></span>
 </p>
