changed URL to Mint locaton to be actual location and not temprary URL. hoping this will improve reliability

--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -7,4 +7,4 @@
 <meta name="keywords" content="programming, how-to, music, movies, books, cooking, travel, computers, nerds, cello, violoncello, videos" />
 
 <!-- Mint -->
-<script src="http://markn.webfactional.com/mint/?js" type="text/javascript" language="javascript"></script>
+<script src="http://mint.zanshin.net/mint/?js" type="text/javascript" language="javascript"></script>
