removed books from navigation as it was way outta date

--- a/source/_includes/custom/navigation.html
+++ b/source/_includes/custom/navigation.html
@@ -2,7 +2,7 @@
   <li><a href="{{ root_url }}/">Home</a></li>
   <li><a href="{{ root_url }}/about">About</a></li>
   <li><a href="{{ root_url }}/archives">Archives</a></li>
-  <li><a href="{{ root_url }}/books">Books</a></li>
+  <!-- > <li><a href="{{ root_url }}/books">Books</a></li> -->
   <li><a href="{{ root_url }}/colophon">Colophon</a></li>
   <li><a href="{{ root_url }}/interact">Interact</a></li>
   <li><a href="http://cello.zanshin.net">Solfège</a></li>
