--- a/source/_includes/google_analytics.html
+++ b/source/_includes/google_analytics.html
@@ -4,6 +4,8 @@
     _gaq.push(['_setAccount', '{{ site.google_analytics_tracking_id }}']);
     _gaq.push(['_trackPageview']);
 
+    setTimeout("_gaq.push(['_trackEvent', '30_seconds', 'read'])", 30000);
+
     (function() {
       var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
       ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
